# fx_trading

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/action_meta/: action.yaml
.github/workflows/: REPO_MERGED_WORKFLOW.yaml  REPO_PR_WORKFLOW.yaml  REPO_WORKFLOW.yaml  simulator_workflow.yaml
ci/: check_formatting.sh  coverage.sh  format.sh
data_node/: BUILD.bazel  DataNode.cpp  DataNode.hpp  sha256.cpp  sha256.hpp  uuid.cpp  uuid.hpp
data_node/tests/: BUILD.bazel  data_node_test_utils.hpp  test_data_node.cpp  test_datanode.cpp  test_example_node.cpp  test_hashing.cpp
data_node_signal_processing/: BUILD.bazel  signal_processing.hpp
data_node_signal_processing/tests/: BUILD.bazel  test_main.cpp  test_signal_processing.cpp
logger/: BUILD.bazel  Logger.hpp
logger/tests/: BUILD.bazel  test_logger.cpp
py_data_node/: BUILD.bazel  PyDataNode.hpp
py_data_node/tests/: BUILD.bazel
simulator/: BUILD.bazel  simulator.cpp  simulator.hpp
simulator/tests/: test_simulator.cpp
stonex/: BUILD.bazel  stonex.h  stonex_types.h
stonex/tests/: BUILD.bazel  stonex_mock.hpp  test_account.cpp  test_jsonize.cpp  test_live_account.cpp
trader/: AccountState.hpp  BUILD.bazel  CandleStickSplitter.hpp  CrossOver.hpp  ForexInstrument.hpp  stonex.h  stonex_types.h
trader/tests/: BUILD.bazel  stonex_node_mock.hpp  test_account.cpp  test_account_node.cpp  test_forex_instruments.cpp  test_live_trader_nodes.cpp  test_trader_nodes.cpp
types/: BUILD.bazel  orders.hpp  positions.hpp  trading_types.hpp  types.h  types.hpp
