cc_library(
    name = "trader",
    deps = [
        "//data_node:data_node",
        "//data_node_signal_processing:signal_processing",
        "//types:trading_types",
        "@cpr",
        "@nlohmann_json//:json",
        ],
    srcs = [],
    hdrs = [
        "CandleStickSplitter.hpp",
        "CrossOver.hpp",
        "ForexInstrument.hpp",
        "AccountState.hpp",
        "stonex.h",
        "stonex_types.h"
    ],
    visibility = ["//visibility:public"],
    includes = ["."]
)