cc_library(
    name = "trader",
    deps = [
        "//data_node:data_node",
        "//data_node_signal_processing:signal_processing",
        "//types:trading_types",
        "//stonex:stonex"
        ],
    srcs = [],
    hdrs = [
        "CandleStickSplitter.hpp",
        "CrossOver.hpp",
        "ForexInstrument.hpp",
        "AccountState.hpp"
    ],
    visibility = ["//visibility:public"],
    includes = ["."]
)