cc_test(
    name = "trader_tests",
    srcs = [
        "test_trader_nodes.cpp",
        "test_forex_instruments.cpp",
        "test_account_node.cpp"
    ],
    includes = ["."],
    size = "small",
    deps = [
        "//data_node/tests:data_node_test_utils",
        "//data_node:data_node",
        "//data_node_signal_processing:signal_processing",
        "//types:trading_types",
        "//trader:trader",
        "//stonex/tests:stonex_mock",
    ],
)