cc_test(
    name = "trader_tests",
    srcs = [
        "test_trader_nodes.cpp",
        "test_forex_instruments.cpp",
        "test_account_node.cpp"
    ],
    includes = ["."],
    size = "small",
    tags = [
        "exclusive"  # Ensures test runs alone
    ],
    deps = [
        "//data_node/tests:data_node_test_utils",
        "//data_node:data_node",
        "//data_node_signal_processing:signal_processing",
        "//types:trading_types",
        "//trader:trader",
        "//trader/tests:stonex_trader_mock"
    ],
)

cc_library(
    name = "stonex_trader_mock",
    includes = ["."],
    visibility = ["//visibility:public"],
    hdrs = ["stonex_node_mock.hpp"],
    deps = [
        "//stonex/tests:stonex_mock",
        "//data_node/tests:data_node_test_utils",
    ],
)

cc_binary(
    name = "trader_live_nodes",
    srcs = [
        "test_live_trader_nodes.cpp",
    ],
    includes = ["."],
    deps = [
        "//data_node/tests:data_node_test_utils",
        "//data_node:data_node",
        "//data_node_signal_processing:signal_processing",
        "//types:trading_types",
        "//trader:trader",
        "//stonex:stonex",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)